objects/DevLog__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sai__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sai</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Text__c</fullName>
        <label>Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DevLog</label>
    <nameField>
        <label>DevLog Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DevLogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>